tests/fixtures/invalid/pow_bytes_bool_float.py
# Cannot call pow() with Bytes, Bool, Float
x = pow(b"hello", True, 1.0)
